
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int8_t ;
typedef int u_int32_t ;


 int F ;
 int N ;
 int THRESHOLD ;

int
decompress_lzss(u_int8_t *dst, u_int32_t dstlen, u_int8_t *src, u_int32_t srclen)
{

    u_int8_t text_buf[N + F - 1];
    u_int8_t *dststart = dst;
 u_int8_t *dstend = dst + dstlen;
    u_int8_t *srcend = src + srclen;
    int i, j, k, r, c;
    unsigned int flags;

    dst = dststart;
    srcend = src + srclen;
    for (i = 0; i < N - F; i++)
        text_buf[i] = ' ';
    r = N - F;
    flags = 0;
    for ( ; ; ) {
        if (((flags >>= 1) & 0x100) == 0) {
            if (src < srcend) c = *src++; else break;
            flags = c | 0xFF00;
        }
        if (flags & 1) {
            if (src < srcend) c = *src++; else break;
            *dst++ = c;
   if (dst >= dstend) {
    goto finish;
   }
            text_buf[r++] = c;
            r &= (N - 1);
        } else {
            if (src < srcend) i = *src++; else break;
            if (src < srcend) j = *src++; else break;
            i |= ((j & 0xF0) << 4);
            j = (j & 0x0F) + THRESHOLD;
            for (k = 0; k <= j; k++) {
                c = text_buf[(i + k) & (N - 1)];
                *dst++ = c;
    if (dst >= dstend) {
     goto finish;
    }
                text_buf[r++] = c;
                r &= (N - 1);
            }
        }
    }
finish:
    return dst - dststart;
}
